--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,57 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    android:orientation="vertical"
+    android:background="#97BCE8">
+
+    <ImageView
+        android:layout_width="250dp"
+        android:layout_height="220dp"
+        android:src="@drawable/app_ic"
+        android:layout_gravity="center"
+        android:layout_marginTop="120dp"/>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:text="Loading..."
+        android:textAlignment="center"
+        android:layout_gravity="center"
+        android:textColor="#1C2D40"
+        android:textSize="45dp"
+        android:layout_marginTop="12dp"/>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Mark you attendance at"
+        android:textAlignment="center"
+        android:layout_gravity="center"
+        android:textColor="#1C2D40"
+        android:textSize="33dp"
+        android:layout_marginTop="40dp"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Attendity"
+        android:textAlignment="center"
+        android:layout_gravity="center"
+        android:textColor="#1C2D40"
+        android:textSize="50dp"/>
+
+    <TextView
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
+        android:text="There is no time like the PRESENT"
+        android:textAlignment="center"
+        android:layout_gravity="center_horizontal"
+        android:textColor="#FFFFFF"
+        android:textSize="25dp"
+        android:layout_marginTop="40dp"/>
+
+</LinearLayout>
