--- a/app/src/main/res/layout/fragment_admin_settings.xml
+++ b/app/src/main/res/layout/fragment_admin_settings.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -28,9 +29,9 @@
                 android:layout_height="wrap_content"
                 android:text="Settings"
                 android:textStyle="bold"
-                android:layout_marginLeft="10dp"
+                android:layout_marginStart="30dp"
                 android:textColor="@color/white"
-                android:textSize="20sp"
+                android:textSize="25sp"
                 android:layout_marginBottom="2dp"/>
         </LinearLayout>
 
@@ -42,13 +43,15 @@
             android:textColor="@color/black"
             android:textSize="20sp"
             android:background="@drawable/border_line"
-            android:layout_marginBottom="2dp"
-            android:drawableStart="@drawable/ic_baseline_manage_employee"
             android:drawablePadding="24dp"
             android:textStyle="bold"
-            />
-        <TextView
+            app:drawableStartCompat="@drawable/ic_baseline_manage_employee" />
 
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="#AEAEAE"/>
+        <TextView
             android:id="@+id/txtShift"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -57,11 +60,14 @@
             android:textStyle="bold"
             android:textSize="20sp"
             android:background="@drawable/border_line"
-            android:layout_marginBottom="2dp"
-            android:drawableStart="@drawable/ic_baseline_access_time_filled_24"
-            android:drawablePadding="24dp"/>
-        <TextView
+            android:drawablePadding="24dp"
+            app:drawableStartCompat="@drawable/ic_baseline_access_time_filled_24" />
 
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="#AEAEAE"/>
+        <TextView
             android:id="@+id/txtChangeAvatar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -70,9 +76,13 @@
             android:textStyle="bold"
             android:textSize="20sp"
             android:background="@drawable/border_line"
-            android:layout_marginBottom="2dp"
-            android:drawableStart="@drawable/ic_baseline_notifications_24"
-            android:drawablePadding="24dp"/>
+            android:drawablePadding="24dp"
+            app:drawableStartCompat="@drawable/ic_baseline_notifications_24" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="#AEAEAE"/>
         <TextView
             android:id="@+id/txtChangePassword"
             android:layout_width="match_parent"
@@ -82,10 +92,13 @@
             android:textSize="20sp"
             android:textStyle="bold"
             android:background="@drawable/border_line"
-            android:layout_marginBottom="2dp"
-            android:drawableStart="@drawable/ic_baseline_change_password"
             android:drawablePadding="24dp"
-            />
+            app:drawableStartCompat="@drawable/ic_baseline_change_password" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="#AEAEAE"/>
         <TextView
             android:id="@+id/txtChangeDescription"
             android:layout_width="match_parent"
@@ -95,10 +108,8 @@
             android:textStyle="bold"
             android:background="@drawable/border_line"
             android:textSize="20sp"
-            android:layout_marginBottom="20dp"
-            android:drawableStart="@drawable/ic_baseline_profile_person"
             android:drawablePadding="24dp"
-            />
+            app:drawableStartCompat="@drawable/ic_baseline_profile_person" />
     </LinearLayout>
 
 </FrameLayout>
