--- a/app/src/main/res/layout/fragment_add_employee.xml
+++ b/app/src/main/res/layout/fragment_add_employee.xml
@@ -1,9 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:context=".AddEmployee">
 
+    <!-- TODO: Update blank fragment layout -->
     <TextView
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
@@ -23,7 +26,7 @@
         android:layout_below="@+id/textView2"
         android:layout_marginStart="20sp"
         android:layout_marginTop="20dp"
-        android:src="@drawable/man_placeholder"
+        android:src="@drawable/person_white"
         android:layout_centerHorizontal="true"
         />
 
@@ -195,4 +198,5 @@
         android:text="Cancel"
         android:textColor="#E56C03"
         android:textSize="16sp" />
+
 </RelativeLayout>
