--- a/app/src/main/res/layout/fragment_add_employee.xml
+++ b/app/src/main/res/layout/fragment_add_employee.xml
@@ -102,6 +102,7 @@
         android:drawableLeft="@drawable/calendar_white"
         android:drawablePadding="15sp"
         android:hint="Birthday"
+        android:focusable="false"
         android:padding="15dp"
         android:textColorHint="#AA4B5151"
         android:textStyle="bold" />
@@ -175,7 +176,7 @@
 
 
     <com.google.android.material.button.MaterialButton
-        android:id="@+id/btnLogin"
+        android:id="@+id/btnAdd"
         android:layout_width="350sp"
         android:layout_height="75sp"
         android:layout_below="@+id/edtPassword1"
@@ -189,10 +190,10 @@
         app:cornerRadius="30sp" />
 
     <TextView
-        android:id="@+id/txtRegisterToLogin"
+        android:id="@+id/btnCancelAdd"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/btnLogin"
+        android:layout_below="@+id/btnAdd"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="10sp"
         android:text="Cancel"
