--- a/app/src/main/res/layout/fragment_admin_settings.xml
+++ b/app/src/main/res/layout/fragment_admin_settings.xml
@@ -100,7 +100,7 @@
             android:layout_height="1dp"
             android:background="#AEAEAE"/>
         <TextView
-            android:id="@+id/txtChangeDescription"
+            android:id="@+id/txtProfile"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Profile"
