--- a/app/src/main/res/layout/fragment_change_password.xml
+++ b/app/src/main/res/layout/fragment_change_password.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:context=".ChangePasswordFragment">
 
     <LinearLayout
         android:orientation="vertical"
@@ -18,7 +20,7 @@
                 android:id="@+id/btnBackChangePassword"
                 android:layout_width="40sp"
                 android:layout_height="match_parent"
-                android:src="@drawable/ic_baseline_option"/>
+                android:src="@drawable/baseline_arrow_back_white_24"/>
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -30,15 +32,6 @@
                 android:layout_marginBottom="2dp" />
 
         </LinearLayout>
-        <TextView
-            android:textColor="@color/black"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="#F4F4F4"
-            android:textSize="14sp"
-            android:text="Password must include letters and numbers, cannot contain your birth year, username and Zalo name"
-            android:textAlignment="center" />
-
 
         <LinearLayout
             android:layout_marginTop="20dp"
@@ -121,7 +114,7 @@
                 android:textColor="@color/white"
                 android:layout_marginTop="15sp"
                 android:text="Update"
-                android:textSize="15sp"
+                android:textSize="18sp"
                 android:backgroundTint="#2196F3"
                 android:layout_gravity="center"
                 app:cornerRadius="45dp"
@@ -129,4 +122,5 @@
         </LinearLayout>
 
     </LinearLayout>
+
 </FrameLayout>
