--- a/app/src/main/res/menu/menu_mng_emp.xml
+++ b/app/src/main/res/menu/menu_mng_emp.xml
@@ -6,4 +6,7 @@
     <item
         android:id="@+id/btnDeleteEmp"
         android:title="Delete"/>
+    <item
+        android:id="@+id/btnResetPass"
+        android:title="Reset Password"/>
 </menu>
