--- a/app/src/main/res/layout/fragment_change_password.xml
+++ b/app/src/main/res/layout/fragment_change_password.xml
@@ -13,7 +13,7 @@
         android:background="#F8F8F8">
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="60dp"
             android:background="#2196F3"
             android:padding="6sp">
             <ImageView
@@ -23,7 +23,8 @@
                 android:src="@drawable/baseline_arrow_back_white_24"/>
             <TextView
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
+                android:gravity="center_vertical"
                 android:text="Password"
                 android:textStyle="bold"
                 android:layout_marginStart="10dp"
