--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -30,6 +30,23 @@
         </LinearLayout>
 
         <TextView
+            android:id="@+id/txtProfile"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Profile"
+            android:textColor="@color/black"
+            android:textStyle="bold"
+            android:background="@drawable/border_line"
+            android:textSize="20sp"
+            android:drawablePadding="24dp"
+            app:drawableStartCompat="@drawable/ic_baseline_profile_person" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="#AEAEAE"/>
+
+        <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Notification"
@@ -39,6 +56,23 @@
             android:background="@drawable/border_line"
             android:drawablePadding="24dp"
             app:drawableStartCompat="@drawable/ic_baseline_notifications_24" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="#AEAEAE"/>
+
+        <TextView
+            android:id="@+id/txtDay_off"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Request a day-off"
+            android:textColor="@color/black"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            android:background="@drawable/border_line"
+            android:drawablePadding="24dp"
+            app:drawableStartCompat="@drawable/ic_work_off" />
 
         <TextView
             android:layout_width="match_parent"
@@ -60,22 +94,7 @@
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:background="#AEAEAE"/>
-        <TextView
-            android:id="@+id/txtProfile"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Profile"
-            android:textColor="@color/black"
-            android:textStyle="bold"
-            android:background="@drawable/border_line"
-            android:textSize="20sp"
-            android:drawablePadding="24dp"
-            app:drawableStartCompat="@drawable/ic_baseline_profile_person" />
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="#AEAEAE"/>
         <TextView
             android:id="@+id/txtLogOut"
             android:layout_width="match_parent"
