--- a/app/src/main/res/layout/fragment_admin_settings.xml
+++ b/app/src/main/res/layout/fragment_admin_settings.xml
@@ -25,8 +25,7 @@
                 android:textStyle="bold"
                 android:layout_marginStart="30dp"
                 android:textColor="@color/white"
-                android:textSize="25sp"
-                android:layout_marginBottom="2dp"/>
+                android:textSize="25sp"/>
         </LinearLayout>
 
         <TextView
