--- a/app/src/main/res/layout/fragment_change_password.xml
+++ b/app/src/main/res/layout/fragment_change_password.xml
@@ -29,8 +29,7 @@
                 android:textStyle="bold"
                 android:layout_marginStart="10dp"
                 android:textColor="@color/white"
-                android:textSize="25sp"
-                android:layout_marginBottom="2dp" />
+                android:textSize="25sp" />
 
         </LinearLayout>
 
