--- a/app/src/main/res/layout/fragment_request_a_day_off.xml
+++ b/app/src/main/res/layout/fragment_request_a_day_off.xml
@@ -15,23 +15,34 @@
             android:layout_width="match_parent"
             android:layout_height="60dp"
             android:background="#2196F3"
+            android:orientation="horizontal"
             android:padding="6dp">
             <ImageView
                 android:id="@+id/btnBackDayOff"
-                android:layout_width="40dp"
+                android:layout_width="0dp"
+                android:layout_weight="1"
                 android:layout_height="match_parent"
                 android:src="@drawable/baseline_arrow_back_white_24"
                 android:contentDescription="TODO" />
             <TextView
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
                 android:layout_height="match_parent"
+                android:layout_weight="4"
                 android:text="Request a day-off"
                 android:gravity="center_vertical"
                 android:textStyle="bold"
                 android:layout_marginStart="30dp"
                 android:textColor="@color/white"
-                android:textSize="25sp"
-                android:layout_marginBottom="2dp"/>
+                android:textSize="25sp" />
+
+            <ImageView
+                android:id="@+id/btnSeeListReq"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="match_parent"
+                android:src="@drawable/ic_list_req_day_off"
+                android:contentDescription="TODO" />
+
         </LinearLayout>
 
         <TextView
